# simplewapi

./: README.md  pyproject.toml
data/: basedatos.sql
src/: main.py
