[project]
name = "simplewapi"
version = "0.1.0"
description = ""
authors = [
    {name = "eolandro",email = "eolandro@gmx.com"}
]
license = "CC0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bottle (>=0.13.4,<0.14.0)",
    "gunicorn (>=26.0.0,<27.0.0)",
    "mariadb (>=1.1.14,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
